--- a/WebRegister/Views/Home/DashBoard.cshtml
+++ b/WebRegister/Views/Home/DashBoard.cshtml
@@ -14,7 +14,7 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@*@foreach (var item in Model) {
     <tr>
         <td>
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
@@ -22,6 +22,6 @@
             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
         </td>
     </tr>
-}
+}*@
 
 </table>
