--- a/WebRegister/Views/Home/LogIn.cshtml
+++ b/WebRegister/Views/Home/LogIn.cshtml
@@ -1,20 +1,19 @@
 ﻿@model Entities.Entity.UserProfile
 
 @{
-    ViewBag.Title = "LogIn";
+    ViewBag.Title = "Log In";
 }
 
-<h2>LogIn</h2>
+<h2>Log In</h2>
 
 @using (Html.BeginForm("LoginVerify","Login",FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UserProfile</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } })
@@ -36,7 +35,7 @@
                 @Html.EditorFor(model => model.UserLastName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.UserLastName, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.UserEmailAddress, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -46,7 +45,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.UserPhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UserPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
@@ -76,7 +75,7 @@
                 @Html.EditorFor(model => model.UserCountryName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.UserCountryName, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.LoginPassword, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -86,7 +85,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.IsPasswordSent, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
@@ -94,16 +93,16 @@
                     @Html.ValidationMessageFor(model => model.IsPasswordSent, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Log in" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back", "Index")
 </div>
