--- a/WebRegister/Views/Home/SignUp.cshtml
+++ b/WebRegister/Views/Home/SignUp.cshtml
@@ -1,17 +1,17 @@
 ﻿@model Entities.Entity.UserProfile
 
 @{
-    ViewBag.Title = "SignUp";
+    ViewBag.Title = "Sign Up";
 }
 
-<h2>SignUp</h2>
+<h2></h2>
 
 @using (Html.BeginForm("CreateLogin", "Login",FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UserProfile</h4>
+        <h4>User Profile</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group hidden">
@@ -105,5 +105,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back", "Index")
 </div>
