--- a/WebRegister/Views/Shared/_Layout.cshtml
+++ b/WebRegister/Views/Shared/_Layout.cshtml
@@ -3,10 +3,26 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Get Set</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <style>
+            .btn {
+                background-color: DodgerBlue;
+                border: none;
+                color: white;
+                padding: 12px 16px;
+                font-size: 16px;
+                cursor: pointer;
+            }
+
+                /* Darker background on mouse-over */
+                .btn:hover {
+                    background-color: RoyalBlue;
+                }
+        </style>*@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -17,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Get Set Technologies", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav"></ul>
@@ -25,6 +41,11 @@
                 <span></span>
                 <a class="nav navbar-nav" style="float:right" onclick="location.href='@Url.Action("SignUp")'">Sign Up &nbsp;</a>
             </div>
+            @*<div class="navbar-collapse collapse">
+            <span class="nav navbar-nav"style="float:right">
+                <button class=" navbar-nav btn " ><i class="fa fa-bars"></i></button>
+            </span>
+        </div>*@
         </div>
     </div>
 
@@ -32,7 +53,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Get Set Technologies Private Limited.</p>
         </footer>
     </div>
 
